--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
                 <div class="status-item potion-display">
                     <p>ポーション: <span id="potion-count-display">0</span> 個</p>
                     <button id="use-potion-btn" class="action-btn tertiary">回復する (HP+30)</button>
+                    <button id="buy-potion-btn" class="action-btn" style="background-color: #f39c12; margin-left: 10px;">生成 (50XP)</button>
                 </div>
                 <div class="action-buttons">
                     <button id="go-to-category-btn" class="action-btn">クエスト</button>
