--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
                         <div id="player-damage-lottie" class="damage-effect"></div>
                     </div>
                     <div class="character-enemy">
-                        <p id="monster-name">モンスター</p>
+                        <p id="monster-name"></p>
                         <div class="hp-bar-container">
                             <div class="hp-bar">
                                 <div id="monster-hp-bar-fill" class="hp-bar-fill"></div>
@@ -214,7 +214,7 @@
                 </div>
                 <div class="quiz-container">
                     <div id="feedback-area"></div>
-                    <h2 id="question-text">問題文がここに表示されます</h2>
+                    <h2 id="question-text"></h2>
                     <div id="choices-container"></div>
                 </div>
             </main>
@@ -222,9 +222,7 @@
             <div id="commentary-overlay" class="hidden">
                 <div class="commentary-modal-content">
                     <h3 id="modal-title">解説</h3>
-                    <div id="modal-commentary-text">
-                        ここに解説文が動的に入ります。
-                    </div>
+                    <div id="modal-commentary-text"></div>
 
                     <div class="modal-unsure-checkbox-container">
                         <input type="checkbox" id="unsure-checkbox" title="この問題をチェックする（自信がない）">
